<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marcoslin.solarfinal.app.Activities.P3Activity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnp31"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:background="@color/colorSecondaryDark"
        android:textColor="@color/textButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="160dp"
        android:layout_height="119dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nuevo_proyecto"
            android:textAlignment="center"/>

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cargar_proyecto"
            android:textAlignment="center" />
    </RadioGroup>

    <Button
        android:id="@+id/btnp32"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="102dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="44dp"
        android:background="@color/colorSecondaryDark"
        android:onClick="gestionarproyectos"
        android:text="Gestionar proyectos"
        android:textColor="@color/textButton"
        app:layout_constraintBottom_toTopOf="@+id/btnp31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</android.support.constraint.ConstraintLayout>
