<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marcoslin.solarfinal.app.Activities.P5Activity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/factor_de_simultaneidad"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText"
                app:layout_constraintEnd_toStartOf="@+id/editText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/editText4" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/editText5" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/editText6" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/editText7" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:visibility="invisible"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="439dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="Pérdidas por cableado"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
                app:layout_constraintEnd_toStartOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="Pérdidas por conversion AC/DC"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
                app:layout_constraintEnd_toStartOf="@+id/editText3"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="Pérdidas por batería"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
                app:layout_constraintEnd_toStartOf="@+id/editText4"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/coeficiente_de_seguridad_para_las_bater_as"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText5"
                app:layout_constraintEnd_toStartOf="@+id/editText5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="Coeficiente de seguridad \n para las placas"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText6"
                app:layout_constraintEnd_toStartOf="@+id/editText6"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="Coeficiente de seguridad \n para el  regulador"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText7"
                app:layout_constraintEnd_toStartOf="@+id/editText7"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="Coeficiente de seguridad \n del convertidor"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText8"
                app:layout_constraintEnd_toStartOf="@+id/editText8"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginEnd="24dp"
                android:text="-"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginEnd="24dp"
                android:text="%"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginEnd="24dp"
                android:text="%"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginEnd="24dp"
                android:text="%"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginEnd="24dp"
                android:text="-"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText5"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginEnd="24dp"
                android:text="-"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText6"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginEnd="24dp"
                android:text="-"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText7"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginEnd="24dp"
                android:text="-"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText8"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnp51"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:background="@color/colorSecondaryDark"
                android:onClick="cargadatos"
                android:text="@string/siguiente"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText8" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="Coeficientes y perdidas"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/textButton"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
